--- a/isi.html
+++ b/isi.html
@@ -18,6 +18,8 @@
                 </p>
                 <p>
                   Dari Abu Hurairah, Rasulullah shallallahu ‘alaihi wa sallam bersabda,
+                </p>
+                <p>
 انظروا إلى من هو أسفل منكم ولا تنظروا إلى من هو فوقكم ، فهو أجدر أن لا تزدروا نعمة الله عليكم
 
 “Pandanglah orang yang berada di bawahmu (dalam masalah harta dan dunia) dan janganlah engkau pandang orang yang berada di atasmu (dalam masalah ini). Dengan demikian, hal itu akan membuatmu tidak meremehkan nikmat Allah padamu.” (HR. Bukhari dan Muslim)
@@ -27,7 +29,7 @@
 “Jika seseorang melihat orang di atasnya (dalam masalah harta dan dunia), dia akan menganggap kecil nikmat Allah yang ada pada dirinya dan dia selalu ingin mendapatkan yang lebih. Cara mengobati penyakit semacam ini, hendaklah seseorang melihat orang yang berada di bawahnya (dalam masalah harta dan dunia). Dengan melakukan semcam ini, seseorang akan ridho dan bersyukur, juga rasa tamaknya (terhadap harta dan dunia) akan berkurang. Jika seseorang sering memandang orang yang berada di atasnya, dia akan mengingkari dan tidak puas terhadap nikmat Allah yang diberikan padanya. Namun, jika dia mengalihkan pandangannya kepada orang di bawahnya, hal ini akan membuatnya ridho dan bersyukur atas nikmat Allah padanya.”
         </p>
          </div>
-        
+         <a href="video.html"  ><div class="link1">HAL 3 VIDEO</div></a>
      </div>
   
 </body>
