--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          </div>
          <div class="navigasi">
             <ul>
-              <a href="index1.html" ><li>HAL 2</li></a> 
+              <a href="isi.html" ><li>HAL 2</li></a> 
               <a href="video.html"> <li>video</li></a>
             </ul>
         </div>
